crates/apollo-compiler/test_data/diagnostics/0093_fragment_validation_with_recursive_type_system.txt
Error: interface `A` declares that it implements `B`, but to do so it must also implement `A`
   ╭─[0093_fragment_validation_with_recursive_type_system.graphql:2:1]
   │
 2 │ ╭─▶ interface A implements B {
   ┆ ┆   
 5 │ ├─▶ }
   │ │       
   │ ╰─────── A must also be implemented here
 6 │     interface B implements A {
   │                            ┬  
   │                            ╰── implementation of A declared by B here
───╯
Error: interface `B` declares that it implements `A`, but to do so it must also implement `B`
   ╭─[0093_fragment_validation_with_recursive_type_system.graphql:6:1]
   │
 2 │     interface A implements B {
   │                            ┬  
   │                            ╰── implementation of B declared by A here
   │ 
 6 │ ╭─▶ interface B implements A {
   ┆ ┆   
 9 │ ├─▶ }
   │ │       
   │ ╰─────── B must also be implemented here
───╯

